@@ -1,0 +1,19 @@
+/* *********************************************
+ * ANDOR
+ * 
+ * USE - EDUCATIONAL PURPOSES ONLY
+ *
+ * COPYRIGHT @ 2014
+ **********************************************/
+
+package org.andor.core;
+
+public class BaseGame extends GameLoop {
+	
+	/* The default constructor */
+	public BaseGame() {
+		//Call the super constructor
+		super();
+	}
+	
+}
