@@ -1,3 +1,11 @@
+/* *********************************************
+ * ANDOR
+ * 
+ * USE - EDUCATIONAL PURPOSES ONLY
+ *
+ * COPYRIGHT @ 2014
+ **********************************************/
+
 package org.andor.tests;
 
 import org.andor.core.Window;
