@@ -1,4 +1,12 @@
 ------------------------------------------------------
+Release 0 | Beta 0 | Development 0 | Experimental 2
+
+* Added GameLoopInterface
+* Added GameLoop
+* Added BaseGame
+* Added BaseGameTest
+
+------------------------------------------------------
 Release 0 | Beta 0 | Development 0 | Experimental 1
 
 * Added Settings
